--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ version = "0.29.0"
 features = [
     'Win32_System_Diagnostics_ToolHelp',
     'Win32_System_Diagnostics_Debug',
+    'Win32_UI_WindowsAndMessaging',
     'Win32_System_ProcessStatus',
     'Win32_System_LibraryLoader',
     'Win32_System_Threading',
