--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,23 +9,24 @@ readme = "README.md"
 repository = "https://github.com/sy1ntexx/radon"
 
 [features]
-external = []
+external = [
+    'windows/Win32_System_Diagnostics_ToolHelp',
+    'windows/Win32_System_Diagnostics_Debug',
+    'windows/Win32_System_Kernel',
+]
 
 [dependencies]
 thiserror = "1.0.0"
 
 [target.'cfg(windows)'.dependencies.windows]
-version = "0.30.0"
+version = "0.32.0"
 features = [
-    'Win32_System_Diagnostics_ToolHelp',
-    'Win32_System_Diagnostics_Debug',
     'Win32_UI_WindowsAndMessaging',
     'Win32_System_ProcessStatus',
     'Win32_System_LibraryLoader',
     'Win32_System_Threading',
     'Win32_System_Console',
     'Win32_System_Memory',
-    'Win32_System_Kernel',
     'Win32_Foundation',
     'Win32_Security',
 ]
