--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "faithe"
-version = "0.3.1"
+version = "0.4.0"
 edition = "2021"
 authors = ["sy1ntexx"]
 license = "MIT"
 description = "Windows memory hacking library."
 readme = "README.md"
 repository = "https://github.com/sy1ntexx/faithe"
+exclude = ["examples"]
 
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
