--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ default-target = "x86_64-pc-windows-msvc"
 targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 
 [features]
+default = ["nightly"]
+nightly = []
 external = [
     'windows/Win32_System_Diagnostics_ToolHelp',
     'windows/Win32_System_Diagnostics_Debug',
