--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "faithe"
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 authors = ["sy1ntexx"]
 license = "MIT"
 description = "Windows memory hacking library."
 readme = "README.md"
 repository = "https://github.com/sy1ntexx/faithe"
-exclude = ["examples"]
+exclude = [
+    "examples/",
+    "CHANGELOG.md",
+]
 
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
