--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ default-target = "x86_64-pc-windows-msvc"
 targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 
 [features]
-default = ["nightly"]
+default = ["nightly", "thiserror"]
+no-std = []
 nightly = []
 external = [
     'windows/Win32_System_Diagnostics_ToolHelp',
@@ -26,7 +27,11 @@ external = [
 ]
 
 [dependencies]
-thiserror = "1.0.0"
+cfg-if = "1.0.0"
+
+[dependencies.thiserror]
+version = "1.0.0"
+optional = true
 
 [target.'cfg(windows)'.dependencies.windows]
 version = "0.32.0"
