Added alloc feature, moved utf16 string

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 [features]
 default = ["nightly", "thiserror", "windows"]
 no-std = []
+alloc = []
 nightly = []
 external = [
     'windows/Win32_System_Diagnostics_ToolHelp',
