--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ targets = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
 
 [features]
 default = ["nightly", "thiserror", "windows", "external"]
+no-msgs = []
 no-std = []
 alloc = []
 nightly = []
